# empty-win32-app

./: .gitignore  CMakeLists.txt  README.md  empty-win32-app.rc  main.cc
